test/libsolidity/syntaxTests/storageLayoutSpecifier/bytes_length_member.sol
contract C layout at bytes("ABCD").length {}
// ----
// UnimplementedFeatureError 1834: (0-44): Code generation is not supported for contracts with specified storage layout base.
